--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 click==6.6
+enum34==1.1.3
 Flask==0.11.1
 itsdangerous==0.24
 Jinja2==2.8
+linebot==0.3.1
 MarkupSafe==0.23
+requests==2.8.1
 Werkzeug==0.11.10
 wheel==0.24.0
