--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ linebot==0.3.1
 MarkupSafe==0.23
 py==1.4.31
 pytest==2.9.2
+redis==2.10.5
 requests==2.8.1
 requests-futures==0.9.7
 Werkzeug==0.11.10
