--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 click==6.6
 enum34==1.1.3
 Flask==0.11.1
+gevent==1.1.2
+gevent-websocket==0.9.5
+greenlet==0.4.10
+gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.8
 linebot==0.3.1
 MarkupSafe==0.23
 py==1.4.31
 pytest==2.9.2
+python-engineio==0.9.2
 redis==2.10.5
 requests==2.8.1
 requests-futures==0.9.7
+six==1.10.0
 Werkzeug==0.11.10
 wheel==0.24.0
 wit==4.0.0
