--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+APScheduler==3.2.0
 click==6.6
 enum34==1.1.3
 Flask==0.11.1
@@ -12,10 +13,12 @@ MarkupSafe==0.23
 py==1.4.31
 pytest==2.9.2
 python-engineio==0.9.2
+pytz==2016.6.1
 redis==2.10.5
 requests==2.8.1
 requests-futures==0.9.7
 six==1.10.0
+tzlocal==1.2.2
 Werkzeug==0.11.10
 wheel==0.24.0
 httplib2==0.9.2
