--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,13 @@ requests-futures==0.9.7
 six==1.10.0
 Werkzeug==0.11.10
 wheel==0.24.0
+httplib2==0.9.2
+oauth2client==3.0.0
+pyasn1==0.1.9
+pyasn1-modules==0.0.8
+rsa==3.4.2
+PyOpenSSL==16.0.0
+cffi==1.7.0
+cryptography==1.4
+idna==2.1
+pycparser==2.14
