--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,11 @@ gspread==0.4.1
 gunicorn==19.6.0
 httplib2==0.9.2
 idna==2.1
+iso8601==0.1.11
 itsdangerous==0.24
 Jinja2==2.8
 linebot==0.3.1
+Mako==1.0.4
 MarkupSafe==0.23
 oauth2client==3.0.0
 py==1.4.31
@@ -22,7 +24,6 @@ pyasn1-modules==0.0.8
 pycparser==2.14
 pyOpenSSL==16.0.0
 pytest==2.9.2
-python-dateutil==2.5.3
 python-engineio==0.9.2
 pytz==2016.6.1
 redis==2.10.5
