Add utf8 for logging.

--- a/logging.conf
+++ b/logging.conf
@@ -24,4 +24,4 @@ formatter= console
 [handler_file]
 class= logging.handlers.RotatingFileHandler
 formatter= file
-args=('coscupbot.log', 'a', 10*1024*1024, 10)
+args=('coscupbot.log', 'a', 10*1024*1024, 10, 'utf-8')
